<resources>
    <string name="app_name">MMA Performance Tracker</string>
    <string name="logg_button">Logg</string>
    <string name="stats_button">Stats</string>
    <string name="maps_button">Maps</string>
    <string name="notf_button">Notifications</string>
    <string name="add_button">Add Training</string>
    <string name="home_img">Home Page Image</string>
    <string name="home_button">Home</string>
    <string name="floating_action_text">Add training</string>
    <string name="chose_sport">Choose Sport</string>
    <string name="chose_technique">Choose Technique</string>
    <string name="duration_text">Duration</string>
    <string name="hours_text">Hours</string>
    <string name="minutes_text">Minutes</string>
    <string name="addTraining_button">Add Training</string>
    <string name="error_add_time">You must add hours or minutes</string>
    <string name="error_add_technique">The technique selected does not contain in the sport selected</string>
    <string name="timer">Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="database_name">sportLoggerDBv10</string>
</resources>