<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar3"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:progressDrawable="@drawable/progress_circle"
        android:background="@drawable/backround_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/progressBar2"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:progressDrawable="@drawable/progress_circle"
        android:background="@drawable/backround_circle"
        app:layout_constraintBottom_toTopOf="@+id/homeImage"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="159dp"
        android:layout_height="138dp"
        android:contentDescription="@string/home_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
        app:srcCompat="@drawable/homepage_picture" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:progressDrawable="@drawable/progress_circle"
        android:background="@drawable/backround_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loggCard"
        style="@style/Widget.MaterialComponents.CardView"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/logg_button"
                app:srcCompat="@drawable/library_books_24px"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="vertical"
                android:background="@color/textColorPrimary"
               />

                <TextView
                    android:id="@+id/loggText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:text="@string/logg_button"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/textColorPrimary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/statsCard"
        style="@style/Widget.MaterialComponents.CardView"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/stats_button"
                app:srcCompat="@drawable/leaderboard_24px"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="vertical"
                android:background="@color/textColorPrimary" />

            <TextView
                android:id="@+id/statsText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/stats_button"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/notifCard"
        style="@style/Widget.MaterialComponents.CardView"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/notf_button"
                app:srcCompat="@drawable/timer_24px"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="vertical"
                android:background="@color/textColorPrimary"/>

            <TextView
                android:id="@+id/notifText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/timer"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/textColorPrimary" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mapsCard"
        style="@style/Widget.MaterialComponents.CardView"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/maps_button"
                app:srcCompat="@drawable/map_24px"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="vertical"
                android:background="@color/textColorPrimary"/>

            <TextView
                android:id="@+id/mapsText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/maps_button"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewProgressBar1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar1"
        app:layout_constraintEnd_toEndOf="@+id/progressBar1"
        app:layout_constraintStart_toStartOf="@+id/progressBar1"
        app:layout_constraintTop_toTopOf="@+id/progressBar1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewProgressBar3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar3"
        app:layout_constraintEnd_toEndOf="@+id/progressBar3"
        app:layout_constraintStart_toStartOf="@+id/progressBar3"
        app:layout_constraintTop_toTopOf="@+id/progressBar3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewProgressBar2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="@+id/progressBar2"
        app:layout_constraintTop_toTopOf="@+id/progressBar2" />


</androidx.constraintlayout.widget.ConstraintLayout>